manifests/headlamp/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"headlamp","namespace":"headlamp"},"spec":{"ports":[{"port":80,"targetPort":4466}],"selector":{"app":"headlamp"}}}
    name: headlamp
    namespace: headlamp
  spec:
    clusterIP: 10.111.214.81
    clusterIPs:
    - 10.111.214.81
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 4466
    selector:
      app: headlamp
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
